Lower the task priority of the notification image deletion task

USER_BLOCKING is too high for this task as it doesn't affect UI.
This CL lowers the task priority to BEST_EFFORT.

Bug: 888276
Change-Id: I5d2a45915dfb82206e2880e58d1c4ec593ef09ca
Reviewed-on: https://chromium-review.googlesource.com/1239162
Commit-Queue: Xi Cheng <chengx@chromium.org>
Reviewed-by: Finnur Thorarinsson <finnur@chromium.org>
Reviewed-by: Robert Liao <robliao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593593}